trunk/src/objects/ProjectTask__c.object
<CustomObject>
    <description>ProjectTask</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DurationUI__c</fullName>
        <label>Duration</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Duration</description>
        <label>Duration Display</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>EndDate</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <displayFormat>#{0}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Indent__c</fullName>
        <description>indent</description>
        <label>Indent</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsExpanded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsExpanded</description>
        <label>IsExpanded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Milestone</description>
        <label>Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentTask__c</fullName>
        <description>ParentTask</description>
        <label>ParentTask</label>
        <referenceTo>ProjectTask__c</referenceTo>
        <relationshipName>ProjectsTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PercentCompleted__c</fullName>
        <description>PercentCompleted</description>
        <label>Percent Completed</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Project</description>
        <label>Project</label>
        <referenceTo>Project2__c</referenceTo>
        <relationshipName>ProjectsTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RawDuration__c</fullName>
        <label>RawDuration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>StartDate</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Describe task status</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reopened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TaskPosition__c</fullName>
        <description>TaskPosition</description>
        <label>TaskPosition</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaskSyncId__c</fullName>
        <description>TaskSyncId</description>
        <label>TaskSyncId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Project Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Task</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Lower_than_100</fullName>
        <active>true</active>
        <errorConditionFormula>Duration__c  &gt; 99</errorConditionFormula>
        <errorDisplayField>Duration__c</errorDisplayField>
        <errorMessage>The max value is 99</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PercentNotNegative</fullName>
        <active>true</active>
        <errorConditionFormula>PercentCompleted__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>PercentCompleted__c</errorDisplayField>
        <errorMessage>The percent must be greater than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>startDateMinorEndDate</fullName>
        <active>true</active>
        <description>User should not be able to enter the start date greater than the end date.</description>
        <errorConditionFormula>StartDate__c  &gt;  EndDate__c</errorConditionFormula>
        <errorDisplayField>StartDate__c</errorDisplayField>
        <errorMessage>Star date must be lower than end date</errorMessage>
    </validationRules>
</CustomObject>